--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,9 @@ services:
       - mlflow
   
   face-filter-app:
-    build: ./app
+    build:
+      context: .
+      dockerfile: app/Dockerfile
     ports:
       - "5002:5001"
     environment:
