--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -17,3 +17,8 @@ scrape_configs:
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
+
+  - job_name: 'airflow'
+    scrape_interval: 10s
+    static_configs:
+      - targets: ['airflow-statsd-exporter:9102']
