feat: better data folder location

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -15,7 +15,7 @@ COPY app/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app/app.py .
-COPY data/predictions /app/predictions
+COPY data/predictions /app/data/predictions
 
 ENV MLFLOW_TRACKING_URI=http://mlflow:5000
 EXPOSE 5001
