--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,7 +67,7 @@ services:
     volumes:
       - ./ml-artifacts:/mlartifacts
       - ./app:/app
-      - ./data:/data
+      - ./data:/app/data
     depends_on:
       - mlflow
 
