Revert "feat: better data folder location"
This reverts commit 6b1345f48bc9445f1a24fb82cd4bcb3fc6153fec.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,7 +67,7 @@ services:
     volumes:
       - ./ml-artifacts:/mlartifacts
       - ./app:/app
-      - ./data:/app/data
+      - ./data:/data
     depends_on:
       - mlflow
 
